lets see what happens

--- a/center.html
+++ b/center.html
@@ -4,7 +4,7 @@
 
     <head>
         <meta charset="utf-8">
-            <title> Community</title>
+            <title> Cafe Internet</title>
         <meta name="author" content="Saori Online">
         <meta name="description" content="Experience">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -15,9 +15,7 @@
      <body>
         <main >
             <div class="cards-container">
-                <div class="art-card">
 <!--                 Javascript function -->
-                </div>
             </div>
         </main>
         <script src="use.js"></script>
