--- a/center.html
+++ b/center.html
@@ -4,17 +4,23 @@
 
     <head>
         <meta charset="utf-8">
-            <title> Cafe Internet</title>
+            <title> Coffee Internet </title>
         <meta name="author" content="Saori Online">
         <meta name="description" content="Experience">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-
         <link href="look.css" rel="stylesheet">
     </head>
 
      <body>
         <main >
-            <div class="cards-container">
+            
+            <div id="promo-bar"> 
+<!--                 Javascript function promoBar()  -->
+            </div>
+            <div id="search-user-buy">
+<!--                 Javascript function orderBy()-->                
+            </div>  
+            <div id="cards-container">
 <!--                 Javascript function -->
             </div>
         </main>
