--- a/center.html
+++ b/center.html
@@ -8,7 +8,9 @@
         <meta name="author" content="Saori Online">
         <meta name="description" content="Experience">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="look.css" rel="stylesheet">
+        <link href="./styles/look.css" rel="stylesheet">
+        <link href="./styles/page-two.css" rel="stylesheet">
+
     </head>
 
      <body>
@@ -20,6 +22,9 @@
             <div id="search-user-buy">
 <!--                 Javascript function orderBy()-->                
             </div>  
+            <div id="logo-menu">
+<!--                 Javascript function pasteLogo()-->                    
+            </div>
             <div id="cards-container">
 <!--                 Javascript function -->
             </div>
