--- a/center.html
+++ b/center.html
@@ -25,6 +25,13 @@
             <div id="logo-menu">
 <!--                 Javascript function pasteLogo()-->                    
             </div>
+            <div class="contain-text">
+                <img class="main-background" src="./assets/main-page.jpg">
+                <div class="centered">TOSTAR CAFÉ ES UN GUSTO, DISFRUTAR SENSACIONES UNA ILUSIÓN</div>
+                <div class="second-centered">Hojea nuestro catálogo de especialidades</div>
+                <button class="before-closing"> HAZ CLICK AQUÍ</button>
+                <p class="closing-phrase">Con cada compra, hay un aporte del 3% a nuestro fondo destinado a la transformación de cultivos cafeteros de 64 familias en Cundinamarca y Tolima</p>
+            </div>
             <div id="cards-container">
 <!--                 Javascript function -->
             </div>
