--- a/center.html
+++ b/center.html
@@ -10,6 +10,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="./styles/look.css" rel="stylesheet">
         <link href="./styles/page-two.css" rel="stylesheet">
+        <link href="./styles/three-list.css" rel="stylesheet">
 
     </head>
 
@@ -31,6 +32,9 @@
                 <div class="second-centered">Hojea nuestro catálogo de especialidades</div>
                 <button class="before-closing"> HAZ CLICK AQUÍ</button>
                 <p class="closing-phrase">Con cada compra, hay un aporte del 3% a nuestro fondo destinado a la transformación de cultivos cafeteros de 64 familias en Cundinamarca y Tolima</p>
+            </div>
+            <div class="illustrated-box">
+                <img class="little-flower" src="./assets/flower-small.png">
             </div>
             <div id="cards-container">
 <!--                 Javascript function -->
